@@ -5,6 +5,7 @@ version 2.1.3.10
 =====================
 - fixed some weirdnesses with the Map Options screen if you had the first game config selected (Boom by default)
 - when you alt-tab back into the script editor, the keyboard focus goes to the text box as expected
+- when you Save As, the filename is filled in already with the current one
 - renamed UDMF/Hexen activation stuff relating to projectiles because it's more correct and less confusing
 - additional logging for shader loading crashes
 
